--- a/project/public/style.css
+++ b/project/public/style.css
@@ -6,13 +6,5 @@
 html,
 body {
 	overflow: hidden;
-	background: #000;
+	background: #ccc;
 }
-
-/* #canvas {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	background: #ffffff;
-} */
