--- a/project/public/style.css
+++ b/project/public/style.css
@@ -1,4 +1,5 @@
 * {
+	box-sizing: border-box;
 	margin: 0;
 	padding: 0;
 }
@@ -6,5 +7,5 @@
 html,
 body {
 	overflow: hidden;
-	background: #ccc;
+	background: #a9a9a9;
 }
